2007-09-03  Jonathan Pryor  <jonpryor@vt.edu>

	* dirent.c: Fix logic to determine if readdir_r() succeeded.  
	  Thanks to Albert Lee for the patch; see #82678.

2007-08-14  Wade Berrier  <wberrier@novell.com>

	* serial.c: include sys/time.h for mac osx 10.3 for timeval

2007-08-12  Lukasz Byczynski <lukaszb@forcom.com.pl>

	* serial.c:
	
	- all changes are based on Windows .Net SerialPort behavior and
	this
	document: http://www.easysw.com/~mike/serial/serial.html
	- removed wrong default values from open_serial
	- added timeout detection in write_serial
	- added proper parameters setting in set_attributes

2007-06-29  Jonathan Pryor  <jonpryor@vt.edu>

	* dirent.c, grp.c, pwd.c, stdio.c, syslog.c, unistd.c: Following in the
	  logic of the 2007-06-27 logic...  Only return failure if an actual
	  DOCUMENTED error occurred.  For many of these functions, there are no
	  docuemented errors, so they "can't fail," even if errno were set.
	  All praise the POSIX standard?

2007-06-28  Jonathan Pryor  <jonpryor@vt.edu>

	* map.c, map.h: Refresh -- to add Utimbuf copy conversion functions.
	  - Includes latest-and-greatest create-native-map output.
	  - Mono's Reflection output has changed as well --
	    FieldInfo.GetValue().ToString("x") is now "correct" for the underlying
	    type, so `short' enums are 0x0000, etc.
	  - Member sorting is now case-insensitive.

2007-06-27  Jonathan Pryor  <jonpryor@vt.edu>

	* grp.c, pwd.c: Only return failure if a documented errno is encountered.
	  This fixes UnixUserInfo.GetLocalUsers() and UnixGroupInfo.GetLocalGroups()
	  on systems missing the file /etc/default/nss (which generates ENOENT,
	  which isn't documented, so therefore it's not a "real" error).
	* mph.h: Add mph_return_if_val_in_list5().

2007-03-28  Wade Berrier  <miguel@novell.com>

	* supportw.c (SendMessageA/GetWindowLongA): Return values to fix some 
	warnings, even though these aren't called (Patch from suse rpms)
