@@ -1,3 +1,7 @@
+2007-09-04  Jonathan Pryor  <jonpryor@vt.edu>
+
+	* dirent.c: Fix `struct dirent' overflow on Solaris.  See #82678.
+
 2007-09-03  Jonathan Pryor  <jonpryor@vt.edu>
 
 	* dirent.c: Fix logic to determine if readdir_r() succeeded.  
